include/dss_capi.h

    DSS_CAPI_DLL void PVSystems_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void PVSystems_Get_RegisterNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void PVSystems_Get_RegisterValues(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL int32_t PVSystems_Get_First(void);
    DSS_CAPI_DLL int32_t PVSystems_Get_Next(void);
    DSS_CAPI_DLL int32_t PVSystems_Get_Count(void);
    DSS_CAPI_DLL int32_t PVSystems_Get_idx(void);
    DSS_CAPI_DLL void PVSystems_Set_idx(int32_t Value);
    DSS_CAPI_DLL char* PVSystems_Get_Name(void);
    DSS_CAPI_DLL void PVSystems_Set_Name(char* Value);
    DSS_CAPI_DLL double PVSystems_Get_Irradiance(void);
    DSS_CAPI_DLL void PVSystems_Set_Irradiance(double Value);
    DSS_CAPI_DLL double PVSystems_Get_kvar(void);
    DSS_CAPI_DLL double PVSystems_Get_kVArated(void);
    DSS_CAPI_DLL double PVSystems_Get_kW(void);
    DSS_CAPI_DLL double PVSystems_Get_PF(void);